fix(select): remove extra margin-left

--- a/style/web/components/select/_index.less
+++ b/style/web/components/select/_index.less
@@ -99,7 +99,6 @@
 
   // input 层级调整
   .@{prefix}-input__wrap {
-    margin-left: @select-placeholder-margin;
     flex: 1;
   }
 
